@@ -60,10 +60,8 @@ class FSDTMLMethod(RestrictedDTML, RoleManager, FSObject, HTML):
     _reading = 0
 
     manage_options=({'label':'Customize', 'action':'manage_main'},
-                    {'label':'View', 'action':'',
-                     'help':('OFSP','DTML-DocumentOrMethod_View.stx')},
-                    {'label':'Proxy', 'action':'manage_proxyForm',
-                     'help':('OFSP','DTML-DocumentOrMethod_Proxy.stx')},
+                    {'label':'View', 'action':''},
+                    {'label':'Proxy', 'action':'manage_proxyForm'},
                    )
 
     security = ClassSecurityInfo()
