@@ -14,6 +14,7 @@
 """
 
 from OFS.SimpleItem import SimpleItem
+from Testing.ZopeTestCase import installPackage
 from Testing.ZopeTestCase.layer import ZopeLite
 from zope.component import adapts
 from zope.i18n.interfaces import IUserPreferredLanguages
@@ -92,6 +93,27 @@ class BrowserLanguages(object):
 
     def getPreferredLanguages(self):
         return ('test',)
+
+
+class OFSZCMLLayer(ZopeLite):
+
+    @classmethod
+    def testSetUp(cls):
+        import zope.component
+        import OFS
+        import Products.Five
+        zcml.load_config('meta.zcml', zope.component)
+        try:
+            zcml.load_config('meta.zcml', OFS)
+            zcml.load_config('configure.zcml', OFS)
+        except IOError:  # Zope <= 2.13.0a2
+            zcml.load_config('meta.zcml', Products.Five)
+        installPackage('OFS')
+        setHooks()
+
+    @classmethod
+    def testTearDown(cls):
+        cleanUp()
 
 
 class EventZCMLLayer(ZopeLite):
